<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textStyle="bold"
            android:textColor="@color/colorAccent" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/profile"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="24dp" android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:textSize="24sp"
                android:textAlignment="center" android:textColor="@android:color/white" android:textStyle="bold"/>
        <TextView
                android:layout_marginTop="16dp"
                android:text="@string/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:textSize="24sp"
                android:textAlignment="center" android:textColor="@android:color/white" android:textStyle="bold"/>
        <TextView
                android:layout_marginTop="16dp"
                android:text="@string/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:textSize="24sp"
                android:textAlignment="center" android:textColor="@android:color/white" android:textStyle="bold"/>
        <TextView
                android:layout_marginTop="16dp"
                android:text="@string/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView10" android:textSize="24sp"
                android:textAlignment="center" android:textColor="@android:color/white" android:textStyle="bold"/>
    </LinearLayout>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_btn" android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Colored" android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:src="@drawable/graph"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:id="@+id/imageView2" app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintBottom_toTopOf="@+id/return_btn" android:layout_marginBottom="16dp"
            android:scaleType="fitXY"/>
</android.support.constraint.ConstraintLayout>