<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/username_et"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent" android:inputType="text"
            android:hint="@string/prompt_username" android:textColor="@android:color/white" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_et"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/username_et"
            android:hint="@string/prompt_password" android:textColor="@android:color/white" android:textStyle="bold"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_btn" android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Colored" android:textStyle="bold"
            android:textAllCaps="false" tools:text="@string/action_sign_in_short"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/password_et"/>
</android.support.constraint.ConstraintLayout>