<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary">

    <TextView
            android:text="@string/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greeting_tv" android:textAlignment="center"
            android:textStyle="bold" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorAccent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/greeting_tv" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="114dp"
                tools:layout_editor_absoluteX="8dp" android:id="@+id/heart_tv">
            <TextView
                    android:text="@string/heart_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                    android:textStyle="bold" android:textSize="24sp" android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/status_great"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="24sp"
                    android:textStyle="bold" android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="114dp"
                tools:layout_editor_absoluteX="8dp" android:id="@+id/respiration_tv">
            <TextView
                    android:text="@string/respiration_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                    android:textSize="24sp" android:textStyle="bold" android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/status_great"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                    android:textSize="24sp" android:textStyle="bold" android:textAlignment="textEnd"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/report_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textSize="30sp"
            android:textStyle="bold" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorAccent" android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toTopOf="@+id/user_btn"/>
    <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp" app:srcCompat="@drawable/user"
            android:id="@+id/user_btn" android:scaleType="fitXY"
            android:background="@android:color/transparent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>